--- a/task_control_interface/CMakeLists.txt
+++ b/task_control_interface/CMakeLists.txt
@@ -18,7 +18,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   msg/TaskToMcu.msg
   msg/VisionResult.msg
   msg/AppCmd.msg
-  # msg/Motion.action
+  action/Motion.action
   # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
   DEPENDENCIES geometry_msgs
 )
